--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This site contains information about Rohit Sridhar's academic projects. In the future, content may be expanded.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: RohitSridhar8
+twitter_username: RohitSridhar
 github_username:  rohit-sridhar
 
 # Build settings
