--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: RohitSridhar8
 github_username:  rohit-sridhar
 
 # Build settings
-theme: slate
+theme: minima
 # remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
